# scaffoldlang

./: .gitignore  Cargo.toml  DEVELOPER_GUIDE.md  MICROS_MACROS_GUIDE.md  README.md  create-distribution.sh  create-working-scaffoldlang.sh  easy-install.sh  fix-vscode-extension.sh  install.sh  test-installation.sh
.github/workflows/: test.yml
examples/: advanced_demo.sl  hello_world.sl  test_hello.sl
src/: adaptive_compiler.rs  ai_ml_system.rs  ai_ml_system.rs.backup  ast.rs  async_system.rs  bytecode.rs  codegen.rs  concurrency.rs  control_flow.rs  debugging.rs  error_handling.rs  escape_analysis.rs  execution_profiler.rs  fann  fast_bytecode.rs  fast_interpreter.rs  formatter.rs  index.ts  interpreter.rs  jit_compiler.rs  jit_compiler.rs.backup  lexer.rs  lib.rs  macro_system.rs  main.rs  matrix_operations.rs  memory_pools.rs  module_system.rs  native_jit_compiler.rs  numpy_arrays.rs  numpy_arrays_simple.rs  pandas_dataframes.rs  parser.rs  pattern_matching.rs  performance_optimizer.rs  scaffoldlang_interpreter.rs  simd_vectorization.rs  simple_cli.rs  simple_optimizer.rs  simple_parser.rs  (+5 more)
src/commands/: create.ts  generate.ts  visual.ts
src/config/: ConfigurationSchema.ts
src/factories/: StrategyFactory.ts
src/generators/: ConfigurableTemplateEngine.ts
src/prompts/: ConfigurationPrompts.ts
src/strategies/: AngularProjectStrategy.ts  ExpressProjectStrategy.ts  NextjsProjectStrategy.ts  NodeProjectStrategy.ts  ProjectStrategy.ts  ReactProjectStrategy.ts  SvelteProjectStrategy.ts
vscode-extension/: README.md  language-configuration.json  package.json
(+30 files in other folders)
